--- a/src/nv.d3.css
+++ b/src/nv.d3.css
@@ -1,20 +1,3 @@
-/********************
- * SVG CSS
- */
-
-
-svg {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  /* Trying to get SVG to act like a greedy block in all browsers */
-  display: block;
-  width:100%;
-  height:100%;
-}
 
 /********************
   Default CSS for an svg element nvd3 used
@@ -158,10 +141,6 @@ svg.nvd3-svg {
 
 .nvd3 text {
   font: normal 12px Arial;
-}
-
-.nvd3 .title {
- font: bold 14px Arial;
 }
 
 .nvd3 .nv-background {
@@ -367,10 +346,20 @@ svg.nvd3-svg {
 
 .nvd3 .nv-groups path.nv-line {
   fill: none;
+  stroke-width: 1.5px;
 }
+
+.nvd3 .nv-groups path.nv-line.nv-thin-line {
+  stroke-width: 1px;
+}
+
 
 .nvd3 .nv-groups path.nv-area {
   stroke: none;
+}
+
+.nvd3 .nv-line.hover path {
+  stroke-width: 6px;
 }
 
 .nvd3.nv-line .nvd3.nv-scatter .nv-groups .nv-point {
